--- a/builds/development/css/anotherstyle.css
+++ b/builds/development/css/anotherstyle.css
@@ -34,3 +34,42 @@ pre.center{
     border: #F2773F solid;
 }
 
+section{
+    background: #000;
+    color: #fff;
+    border-radius: 1em;
+    padding: 1em;
+    position: absolute;
+    top:50%;
+    left:50%;
+    margin-right: -50%;
+    transform: translate(-50%,-50%)
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
